test/integration/gateway/manifests/conflict/at_least_1_valid/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: haproxy
  listeners:
  - name: http-8080
    port: 8080
    protocol: HTTP
  - name: http-8081
    port: 8081
    protocol: HTTP
