test/integration/gateway/manifests/conflict/at_least_1_valid/gateway2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway2
spec:
  gatewayClassName: haproxy
  listeners:
  - name: http-8080
    port: 8080
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: offload
  - name: http-9090
    port: 9090
    protocol: HTTP
